Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <!-- Your code here -->
   <img src="https://i.imgur.com/H1qsYEl.png">
   <img src=".." alt="Text">
-  
+    <img src="https://i.imgur.com/H1qsYEl.png" alt="text">
+
 </body>
 </html>
