--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 <body>
 
   <!-- Your code here -->
+  <img src="https://i.imgur.com/H1qsYEl.png">
+  <img src=".." alt="Text">
+  <img src="https://i.imgur.com/H1qsYEl.png" alt="text" title="We're here to help you!">
 
 </body>
 </html>
